<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.avaje</groupId>
    <artifactId>java11-oss</artifactId>
    <version>3.9</version>
  </parent>

  <artifactId>nima-error-handler</artifactId>
  <version>1</version>

  <properties>
    <java.release>19</java.release>
    <maven.compiler.source>19</maven.compiler.source>
    <maven.compiler.target>19</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>

    <dependency>
      <groupId>io.helidon.nima.webserver</groupId>
      <artifactId>helidon-nima-webserver</artifactId>
      <version>4.0.0-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-http-client</artifactId>
      <version>1.20</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>junit</artifactId>
      <version>1.1</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  	<build>
  		<plugins>
  			<plugin>
  				<groupId>org.apache.maven.plugins</groupId>
  				<artifactId>maven-compiler-plugin</artifactId>
  				<version>3.10.1</version>
  				<configuration>
  					<release>19</release>
  				</configuration>
  			</plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <useModulePath>false</useModulePath>
            <argLine>--enable-preview</argLine>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <configuration>
            <useModulePath>false</useModulePath>
            <argLine>--enable-preview</argLine>
          </configuration>
        </plugin>

  		</plugins>
  	</build>



</project>
